unpackaged/main/default/objects/Company_Labels__c/Company_Labels__c.object-meta.xml
<CustomObject>
    <label>Company Labels</label>
    <nameField>
        <label>Company Labels Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>