unpackaged/main/default/objects/Company_Labels__c/fields/Default_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Frequency__c</fullName>
    <label>Default Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>