unpackaged/main/default/objects/Company_Labels__c/fields/Default_Entity__c.field-meta.xml
<CustomField>
    <fullName>Default_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Company Labels</relationshipLabel>
    <relationshipName>Company_Labels</relationshipName>
    <type>Lookup</type>
</CustomField>