unpackaged/main/default/objects/Company_Labels__c/fields/Extension_Mode__c.field-meta.xml
<CustomField>
    <fullName>Extension_Mode__c</fullName>
    <label>Default Extension Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Extension_Mode</valueSetName>
    </valueSet>
</CustomField>