unpackaged/main/default/objects/Company_Labels__c/fields/Notice_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_Months__c</fullName>
    <label>Default Notice Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>