unpackaged/main/default/objects/Company_Labels__c/fields/Renewal_Term__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term__c</fullName>
    <inlineHelpText>In Months.</inlineHelpText>
    <label>Default Renewal Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>