unpackaged/main/default/objects/Company_Labels__c/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <inlineHelpText>In Months.</inlineHelpText>
    <label>Default Subscription Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>